--- a/themes/flatgroup/scss/base/_typography.scss
+++ b/themes/flatgroup/scss/base/_typography.scss
@@ -2,7 +2,7 @@ $font-weight-normal: 400;
 $font-weight-bold: 700;
 $line-height-base: 1.6;
 $line-height-heading: 1.2;
-$font-family-base: "Sora", sans-serif;
+$font-family-base: "Funnel Sans", sans-serif;
 
 html,
 body {
