--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -168,7 +168,7 @@
                 button {
                   background: $kui-disabled;
                   color: $black-color-500;
-                  font-size: 14px;
+                  font-size: 15px;
                   font-weight: 400;
                   border-radius: 4px;
                   border: none;
@@ -182,7 +182,7 @@
 
                   &.selected {
                     color: $kui-theme;
-                    box-shadow: inset 0 0 0 1px $green-mirage-500;
+                    box-shadow: inset 0 0 0 2px $kui-theme;
                     background: $pure-white;
                     transform: scale(1);
                     animation: bounceBack 0.3s ease;
@@ -205,7 +205,7 @@
 
                 .investment-button {
                   width: auto;
-                  font-size: 14px;
+                  font-size: 16px;
                   font-weight: 400;
                 }
 
@@ -224,6 +224,7 @@
                 .room-button {
                   width: 51px;
                   height: 48px;
+                  font-size: 16px;
                 }
 
                 .floor-button {
@@ -236,7 +237,7 @@
                   display: inline-flex;
                   align-items: center;
                   cursor: pointer;
-                  font-size: 15px;
+                  font-size: 16px;
                   margin-right: 10px;
 
                   input[type="checkbox"] {
@@ -246,8 +247,8 @@
                   .status-checkbox-box {
                     width: 22px;
                     height: 22px;
-                    border: 2px solid $kui-theme;
-                    border-radius: 15px;
+                    border: 2px solid $kui-disabled-500;
+                    border-radius: 2.5px;
                     margin-right: 10px;
                     transition: border-color 0.3s ease, background-color 0.3s ease;
                     display: inline-block;
@@ -285,7 +286,7 @@
                 .advancedFilters__dropdown-button {
                   background-color: $kui-disabled;
                   padding: 10px 15px;
-                  font-size: 15px;
+                  font-size: 17px;
                   border-radius: 4px;
                   color: $black-color-500;
                   height: 48px;
@@ -318,7 +319,6 @@
                   border-top: 2px solid $kui-theme;
                   background-color: $kui-disabled;
                   width: 100%;
-                  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
                   z-index: 1;
                   max-height: 200px;
                   border-radius: 0 0 5px 5px;
@@ -334,10 +334,6 @@
                     font-size: 15px;
                     align-items: center;
                     cursor: pointer;
-
-                    &:hover {
-                      background-color: $pure-white;
-                    }
 
                     input[type="checkbox"] {
                       -webkit-appearance: none;
@@ -555,10 +551,10 @@
             background: $kui-theme;
             padding: 7px 12px;
             font-weight: 600;
-            height: 43px;
+            height: 48px;
             width: 100%;
             min-width: 130px;
-            font-size: 14px;
+            font-size: 17px;
             border-radius: 8px;
             color: white;
             position: relative;
