changes at filter moda, cosmetic changes

--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -79,7 +79,7 @@ $color-background: #e7e7e7;
 
 $mirage-color-500: #1c2637;
 
-$green-mirage-500: #0d8342;
+$green-mirage-500: #01b474;
 
 $strawberry-500: #e31c5f;
 
@@ -92,7 +92,7 @@ $theme-blue: #006ce4;
 
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
-$kui-theme: #000;
+$kui-theme: #a67f5f;
 
 $kui-disabled: #f3f3f3;
 $kui-disabled-500: #5e5e5e;
