--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -33,8 +33,7 @@
       height: 100%;
       inset: 0;
       z-index: 20;
-      top: 45px;
-      border-radius: 20px 20px 0 0;
+      top: 0;
 
       @keyframes slide-up {
         0% {
@@ -75,7 +74,7 @@
       .advancedFilters__nav {
         display: flex;
         align-items: center;
-        padding-block: 18px 18px;
+        padding-block: 15px 15px;
         border-bottom: 1px solid $kui-disabled;
         position: sticky;
         background: white;
@@ -87,24 +86,23 @@
           margin-left: 20px;
 
           svg {
-            margin-left: 3px;
-            width: 15px;
+            width: 27px;
             height: auto;
 
             path {
               stroke: $black-color-500;
-              stroke-width: 3.5;
+              stroke-width: 2;
             }
           }
         }
 
         p {
           position: absolute;
-          left: 44%;
-          margin: 0 0 0 0;
+          left: 16%;
+          margin: 0 0 2px 0;
           color: $black-color-500;
-          font-size: 16px;
-          font-weight: 500;
+          font-size: 19px;
+          font-weight: 600;
           line-height: 1.32;
           overflow: hidden;
           text-align: center;
@@ -115,9 +113,9 @@
         #advancedFilters__clear-btn {
           margin-left: auto;
           margin-right: 20px;
-          font-size: 11px;
+          font-size: 13px;
           text-transform: uppercase;
-          font-weight: 400;
+          font-weight: 500;
           color: $black-color-500;
           line-height: 1;
           margin-block: 2px 0;
@@ -170,7 +168,6 @@
                   color: $black-color-500;
                   font-size: 15px;
                   font-weight: 400;
-                  border-radius: 4px;
                   border: none;
                   height: 48px;
                   line-height: 1.5;
@@ -182,7 +179,7 @@
 
                   &.selected {
                     color: $kui-theme;
-                    box-shadow: inset 0 0 0 2px $kui-theme;
+                    box-shadow: inset 0 0 0 1.4px $kui-theme;
                     background: $pure-white;
                     transform: scale(1);
                     animation: bounceBack 0.3s ease;
@@ -248,7 +245,6 @@
                     width: 22px;
                     height: 22px;
                     border: 2px solid $kui-disabled-500;
-                    border-radius: 2.5px;
                     margin-right: 10px;
                     transition: border-color 0.3s ease, background-color 0.3s ease;
                     display: inline-block;
@@ -331,7 +327,7 @@
                   .advancedFilters__dropdown-item {
                     padding: 12px 16px;
                     display: flex;
-                    font-size: 15px;
+                    font-size: 16px;
                     align-items: center;
                     cursor: pointer;
 
@@ -341,8 +337,8 @@
                       appearance: none;
                       width: 20px;
                       height: 20px;
-                      border: 2px solid $kui-theme;
-                      border-radius: 4px;
+                      border: 2px solid $kui-disabled-500;
+                      border-radius: 0;
                       position: relative;
                       margin-right: 10px;
                       cursor: pointer;
@@ -538,7 +534,7 @@
         align-items: center;
         background: white;
         bottom: 40px;
-        height: 60px;
+        height: 72px;
         width: 100%;
         border-top: 1px solid $color-disabled;
 
@@ -555,7 +551,6 @@
             width: 100%;
             min-width: 130px;
             font-size: 17px;
-            border-radius: 8px;
             color: white;
             position: relative;
             display: inline-flex;
