--- a/themes/flatgroup/scss/main.css
+++ b/themes/flatgroup/scss/main.css
@@ -147,7 +147,7 @@ button {
   font-size: 14px;
   border: 1px solid #DDDDDD;
   border-radius: 5px;
-  color: #000;
+  color: #a67f5f;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -158,13 +158,13 @@ button {
   height: auto;
 }
 #search-bar-wrapper .flex .filters-trigger button svg path {
-  stroke: #000;
+  stroke: #a67f5f;
 }
 #search-bar-wrapper .flex .filters-trigger button #advancedFilters__count {
   margin-left: 3px;
   font-weight: 700;
   color: #FFF;
-  background: #000;
+  background: #a67f5f;
   border-radius: 10px;
   height: 17px;
   width: 17px;
@@ -253,8 +253,7 @@ button {
   height: 100%;
   inset: 0;
   z-index: 20;
-  top: 45px;
-  border-radius: 20px 20px 0 0;
+  top: 0;
 }
 @keyframes slide-up {
   0% {
@@ -289,7 +288,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav {
   display: flex;
   align-items: center;
-  padding-block: 18px 18px;
+  padding-block: 15px 15px;
   border-bottom: 1px solid #f3f3f3;
   position: sticky;
   background: white;
@@ -301,21 +300,20 @@ button {
   margin-left: 20px;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close svg {
-  margin-left: 3px;
-  width: 15px;
+  width: 27px;
   height: auto;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close svg path {
   stroke: #212121;
-  stroke-width: 3.5;
+  stroke-width: 2;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav p {
   position: absolute;
-  left: 44%;
-  margin: 0 0 0 0;
+  left: 16%;
+  margin: 0 0 2px 0;
   color: #212121;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 19px;
+  font-weight: 600;
   line-height: 1.32;
   overflow: hidden;
   text-align: center;
@@ -325,9 +323,9 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__clear-btn {
   margin-left: auto;
   margin-right: 20px;
-  font-size: 11px;
+  font-size: 13px;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 500;
   color: #212121;
   line-height: 1;
   margin-block: 2px 0;
@@ -370,7 +368,6 @@ button {
   color: #212121;
   font-size: 15px;
   font-weight: 400;
-  border-radius: 4px;
   border: none;
   height: 48px;
   line-height: 1.5;
@@ -381,8 +378,8 @@ button {
   transition: transform 0.1s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons button.selected {
-  color: #000;
-  box-shadow: inset 0 0 0 2px #000;
+  color: #a67f5f;
+  box-shadow: inset 0 0 0 1.4px #a67f5f;
   background: #FFF;
   transform: scale(1);
   animation: bounceBack 0.3s ease;
@@ -437,7 +434,6 @@ button {
   width: 22px;
   height: 22px;
   border: 2px solid #5e5e5e;
-  border-radius: 2.5px;
   margin-right: 10px;
   transition: border-color 0.3s ease, background-color 0.3s ease;
   display: inline-block;
@@ -457,8 +453,8 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box {
-  background-color: #000;
-  border-color: #000;
+  background-color: #a67f5f;
+  border-color: #a67f5f;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box::after {
   opacity: 1;
@@ -497,7 +493,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content {
   display: none;
   position: absolute;
-  border-top: 2px solid #000;
+  border-top: 2px solid #a67f5f;
   background-color: #f3f3f3;
   width: 100%;
   z-index: 1;
@@ -511,7 +507,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item {
   padding: 12px 16px;
   display: flex;
-  font-size: 15px;
+  font-size: 16px;
   align-items: center;
   cursor: pointer;
 }
@@ -521,15 +517,15 @@ button {
   appearance: none;
   width: 20px;
   height: 20px;
-  border: 2px solid #000;
-  border-radius: 4px;
+  border: 2px solid #5e5e5e;
+  border-radius: 0;
   position: relative;
   margin-right: 10px;
   cursor: pointer;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked {
-  background-color: #000;
-  border-color: #000;
+  background-color: #a67f5f;
+  border-color: #a67f5f;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked::after {
   content: "";
@@ -545,7 +541,7 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:hover {
-  border-color: #000;
+  border-color: #a67f5f;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi {
   display: flex;
@@ -567,7 +563,7 @@ button {
   box-shadow: none;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-connects .noUi-connect {
-  background: #000;
+  background: #a67f5f;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle {
   width: 24px;
@@ -576,7 +572,7 @@ button {
   border-radius: 50px;
   box-shadow: none;
   background: #FFF;
-  border: 2px solid #000;
+  border: 2px solid #a67f5f;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::before, #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::after {
   display: none;
@@ -677,7 +673,7 @@ button {
   align-items: center;
   background: white;
   bottom: 40px;
-  height: 60px;
+  height: 72px;
   width: 100%;
   border-top: 1px solid #DDDDDD;
 }
@@ -687,14 +683,13 @@ button {
   justify-content: space-between;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__footer .advancedFilters__buttons__container .advancedFilters__search__button {
-  background: #000;
+  background: #a67f5f;
   padding: 7px 12px;
   font-weight: 600;
   height: 48px;
   width: 100%;
   min-width: 130px;
   font-size: 17px;
-  border-radius: 8px;
   color: white;
   position: relative;
   display: inline-flex;
