features added as parameters in filters modal

--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -92,7 +92,9 @@ $theme-blue: #006ce4;
 
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
-$kui-theme: #a67f5f;
+// $kui-theme: #a67f5f;
+$kui-theme: #007e8a;
 
 $kui-disabled: #f3f3f3;
 $kui-disabled-500: #5e5e5e;
+$kui-disabled-border: #e2e3e6;
